# forge

./: .containerignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCKERHUB.md  Dockerfile  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  docker.yml
deploy/helm/forge/: Chart.yaml  README.md  values.yaml
deploy/helm/forge/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  run-job.yaml  secret.yaml  service.yaml
docs/: API.md  CONFIG.md  DESIGN.md  OPERATIONS.md
examples/: README.md  engine_sim.py  mock_engine.py  prompts.jsonl  slow_mock.py
forge-agent/: Cargo.toml  README.md
forge-agent/src/: http.rs  lib.rs  main.rs
forge-batch/: Cargo.toml  README.md
forge-batch/src/: lib.rs  openai.rs
forge-batch/tests/: e2e.rs
forge-cli/: Cargo.toml  README.md
forge-cli/src/: main.rs
forge-cli/tests/: concurrency.rs  crash.rs  e2e.rs  export.rs  object_store.rs  pipelining.rs  scale.rs  status.rs  verify.rs
forge-core/: Cargo.toml  README.md
forge-core/src/: cost.rs  error.rs  failure.rs  lib.rs  retry.rs  run.rs  state.rs  traits.rs  types.rs  validate.rs
forge-proto/: Cargo.toml
forge-proto/src/: lib.rs
forge-queue/: Cargo.toml  README.md
forge-queue/src/: lib.rs  redb_backend.rs  sqlite.rs
forge-shard/: Cargo.toml  README.md
forge-shard/src/: bucket.rs  lib.rs  verify.rs
forge-spot/: Cargo.toml
forge-spot/src/: lib.rs
forge-store/: Cargo.toml  README.md
forge-store/src/: lib.rs  object_store_backend.rs  parquet_store.rs
forge-worker/: Cargo.toml  README.md
forge-worker/src/: lib.rs
