[package]
name = "forge-spot"
description = "forge spot/preemptible interruption detection — poll-only AWS/GCP/Azure metadata sources. forge CONSUMES interruption signals and re-queues at item granularity; it never provisions, launches, or tears down instances."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
